# web_touchpad

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pub.yml
public/: index.html
src/: main.rs
